restructured projects from blogs

--- a/themes/hugo-theme-basic-customized/layouts/_default/list.html
+++ b/themes/hugo-theme-basic-customized/layouts/_default/list.html
@@ -22,7 +22,7 @@
           >
           <span
             class="f6 gray db dib-ns"
-            >{{ .Date.Format "January 2, 2006" }}</span
+            >{{ .Date.Format "January 2, 2006" }} - {{ .ReadingTime }} minute read</span
           >
         </li>
         <!-- prettier-ignore -->
