--- a/themes/hugo-theme-basic-customized/layouts/post/single.html
+++ b/themes/hugo-theme-basic-customized/layouts/post/single.html
@@ -13,8 +13,7 @@
 
   <section id="main" class="mt5">
     <h1 itemprop="name" id="title">{{ .Title }}</h1>
-    <span class="f6 gray">{{ .Date.Format "January 2, 2006" }}</span>
-
+     <span class="f6 gray">{{ .Date.Format "January 2, 2006" }} - {{ .ReadingTime }} minute read</span> 
       <article itemprop="articleBody" id="content" class="w-90 lh-copy">
         {{ .Content }}
       </article>
