--- a/themes/hugo-theme-basic-customized/layouts/taxonomy/category.html
+++ b/themes/hugo-theme-basic-customized/layouts/taxonomy/category.html
@@ -13,7 +13,7 @@
   <a href="/categories" class="b bw1 bb pb1 no-underline black">categories</a>
   <span class="b"> / </span>
   <!-- prettier-ignore -->
-  <span class="b pb1 no-underline black">{{ .Title | lower }}</span>
+  <span class="b pb1 no-underline black">{{ .Title | lower }}</span><a>
 
   <section id="main" class="mt5">
     <div>
