--- a/themes/hugo-theme-basic-customized/layouts/_default/list.html
+++ b/themes/hugo-theme-basic-customized/layouts/_default/list.html
@@ -6,7 +6,7 @@
   <span class="b">/ </span>
   <a
     href="{{ .Site.BaseURL  }}"
-    class="b bw1 bb pb1 no-underline black"
+    class="b bw1 bb pb1 no-underline #a9a9b3"
     >{{ .Site.Title  }}</a
   >
   <section id="main" class="mt5">
@@ -16,7 +16,7 @@
         {{ range .Data.Pages.ByDate.Reverse }}
         <li class="list pl0 lh-copy">
           <a
-            class="f3 b dib black no-underline"
+            class="f3 b dib #a9a9b3 no-underline"
             href="{{ .Permalink}}"
             >{{ .Title }}</a
           >
