--- a/themes/hugo-theme-basic-customized/layouts/_default/single.html
+++ b/themes/hugo-theme-basic-customized/layouts/_default/single.html
@@ -9,7 +9,7 @@
   <span class="b">/ </span>
   <a
     href="{{ .Site.BaseURL  }}"
-    class="b bb bw1 pb1 no-underline black"
+    class="b bb bw1 pb1 no-underline #a9a9b3"
     >{{ .Site.Title }}</a
   >
 
