--- a/themes/hugo-theme-basic-customized/layouts/index.html
+++ b/themes/hugo-theme-basic-customized/layouts/index.html
@@ -36,7 +36,7 @@
           <!-- prettier-ignore -->
           {{ range .Site.Params.menu }}
           <li class="b mv3">
-            <a class="f3 b pa1 black" href="{{ .url }}">{{ .name }}</a>
+            <a class="f3 b pa1 #a9a9b3" href="{{ .url }}">{{ .name }}</a>
           </li>
           <!-- prettier-ignore -->
           {{ end }}
