--- a/themes/hugo-theme-basic-customized/layouts/partials/head_includes.html
+++ b/themes/hugo-theme-basic-customized/layouts/partials/head_includes.html
@@ -3,7 +3,11 @@
   href="https://unpkg.com/tachyons@4.11.1/css/tachyons.min.css"
 />
 
-<link rel="stylesheet" href="{{ .Site.BaseURL }}css/style.css" />
+<link 
+	rel="stylesheet" 
+	href="{{ .Site.BaseURL }}css/style.css"
+/>
+
 
 <link
   rel="stylesheet"
