--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,46 +1,61 @@
-* {
-	background-color: 		#292a2d;
-	color:					#a9a9b3;
-}
-
 body {
-  -webkit-font-smoothings: 	antialiased;
-  -moz-osx-font-smoothing: 	grayscale;
-  text-rendering: 			optimizeLegibility;
+	-webkit-font-smoothings: 	antialiased;
+	-moz-osx-font-smoothing: 	grayscale;
+    text-rendering: 			optimizeLegibility;
 }
 
 code {
-  padding: 					2px 4px;
-  font-size: 				90%;
-  background-color: 		#1e1f21;
-  /* border-radius: 4px; */
+    padding: 					2px 4px;
+    font-size: 					90%;
+    background-color: 			#1e1f21;
+    /* border-radius: 4px; */
 }
 
 pre {
-  display: 					block;
-  padding: 					9.5px;
-  margin: 					0 0 10px;
-  line-height: 				1.4;
-  word-break: 				break-all;
-  word-wrap: 				break-word;
-  border:					1px solid #ccc;
-  /* border-radius:			4px; */
+    display: 					block;
+    padding: 					9.5px;
+    margin: 					0 0 10px;
+    line-height: 				1.4;
+    word-break: 				break-all;
+    word-wrap: 					break-word;
+    border:						1px solid #ccc;
+    /* border-radius:			4px; */
+	
 }
 
 pre,
 code {
-  font-family:				monocode, monospace;
-  -webkit-font-smoothings:	antialiased;
-  -moz-osx-font-smoothing:	grayscale;
+	font-family:				monocode, monospace;
+	-webkit-font-smoothings:	antialiased;
+	-moz-osx-font-smoothing:	grayscale;
 }
 
-::selection {
-  color: 					#02caf2;
-  background: 				white;
+.hljs {
+	background:					#292a2d;
+	color:						#a9a9b3;	
 }
+
+.hljs-built_in{
+	color:						green;
+}
+
+.hljs-nomarkup{
+	color:						#d38b00;
+}
+
+code::selection {
+    color: 						#00fb10;
+    background: 				black;
+}
+
 
 a:hover{
-	background-color:		lime;
-	color:					#2b2b2b;
-	box-shadow:				-3px -3px yellow;
+	background-color:			lime;
+	color:						#2b2b2b;
+	box-shadow:					-3px -3px yellow;
+}
+
+* {
+	background-color: 			#292a2d;
+	color:						#a9a9b3;
 }
