--- a/static/css/style.css
+++ b/static/css/style.css
@@ -43,6 +43,11 @@ code {
 	color:						#d38b00;
 }
 
+::selection {
+    color: 						white;
+    background: 				blue;
+}
+
 code::selection {
     color: 						#00fb10;
     background: 				black;
@@ -51,7 +56,7 @@ code::selection {
 
 a:hover{
 	background-color:			lime;
-	color:						#2b2b2b;
+	color:						black;
 	box-shadow:					-3px -3px yellow;
 }
 
