--- a/themes/hugo-theme-basic-customized/layouts/partials/footer.html
+++ b/themes/hugo-theme-basic-customized/layouts/partials/footer.html
@@ -2,12 +2,15 @@
     <div>
       <p class="f6 gray mt6 lh-copy">
 		---<br>
-		BTC:&emsp; bc1qqzp6ff9zuxhrxrtfcrxf745mv0amjkp5j0kpeu<br>
-		ETH:&emsp; 0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA<br><br>
-        {{ .Site.Copyright | safeHTML }}
+		BTC:&emsp;bc1qqzp6ff9zuxhrxrtfcrxf745mv0amjkp5j0kpeu<br>
+		ETH:&emsp;0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA<br>
+        {{ .Site.Copyright | safeHTML }}<br>
+		Powered by <a href="https://gohugo.io">Hugo</a><br>
+		{{ if .RSSLink }}
+			<a href="{{ .RSSLink }}" title="{{ .Site.Title }}" type="application/rss+xml" rel="alternate">RSS</a>
+		{{ end }}
 
-    </div>
-  </footer>
-  
-  {{ partial "scripts.html" . }}
+	</div>
+ </footer>
 
+{{ partial "scripts.html" . }}
