--- a/themes/hugo-theme-basic-customized/layouts/partials/head_includes.html
+++ b/themes/hugo-theme-basic-customized/layouts/partials/head_includes.html
@@ -13,3 +13,8 @@
 	rel="stylesheet" 
 	href="{{ .Site.BaseURL }}/css/style.css"
 />
+
+{{ if .RSSLink }}
+  <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
+  <link href="{{ .RSSLink }}" rel="feed" type="application/rss+xml" title="{{ .Site.Title }}" />
+{{ end }}
