--- a/themes/hugo-theme-basic-customized/layouts/partials/head_includes.html
+++ b/themes/hugo-theme-basic-customized/layouts/partials/head_includes.html
@@ -11,7 +11,7 @@
 
 <link 
 	rel="stylesheet" 
-	href="{{ .Site.BaseURL }}/css/style.css"
+	href="{{ .Site.BaseURL }}css/style.css"
 />
 
 {{ if .RSSLink }}
