--- a/static/css/style.css
+++ b/static/css/style.css
@@ -45,10 +45,23 @@ code {
 a:hover {
 background-color:               #018574;
 transition-duration:            .4s;
-
 }
 
-p a {
+a.no-underline, a.pa1 {
+    word-wrap:                  break-word;
+    border:                     none;
+    box-shadow:                 inset 0 -.2em 0 #007593;
+    transition-property:        background-color;
+    color:                      #cbcbcb;
+    transition-timing-function: ease-in-out;
+    text-decoration:            none;
+}
+
+a.no-underline:hover, a.pa1:hover {
+    background-color: #007593;
+}
+
+p a, li a {
     word-wrap:                  break-word;
     border:                     none;
     box-shadow:                 inset 0 -.2em 0 #018574;
@@ -56,6 +69,9 @@ p a {
     color:                      #cbcbcb;
     transition-timing-function: ease-in-out;
     text-decoration:            none;
+}
+p a:hover, li a:hover {
+    background-color: #018574;
 }
 
 code::selection,
