--- a/themes/hugo-theme-basic-customized/layouts/partials/footer.html
+++ b/themes/hugo-theme-basic-customized/layouts/partials/footer.html
@@ -2,8 +2,8 @@
 	<div>
 		<p class="f6 gray mt6 lh-copy">
 		---<br>
-		BTC:&emsp;bc1qqzp6ff9zuxhrxrtfcrxf745mv0amjkp5j0kpeu<br>
-		ETH:&emsp;0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA<br>
+		BTC / <a href="btc:bc1qqzp6ff9zuxhrxrtfcrxf745mv0amjkp5j0kpeu">bc1qqzp6ff9zuxhrxrtfcrxf745mv0amjkp5j0kpeu</a><br>
+		ETH / <a href="eth:0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA">0x7aB5aF122F0f09e9cb7d141ba04b1ce14F18D3bA</a><br>
 		{{ .Site.Copyright | safeHTML }}<br>
 		Powered by <a href="https://gohugo.io">Hugo</a><br>
 
