added s to categories page

--- a/themes/hugo-theme-basic-customized/layouts/taxonomy/category.html
+++ b/themes/hugo-theme-basic-customized/layouts/taxonomy/category.html
@@ -24,7 +24,7 @@
           <a
             class="f3 b dib #a9a9b3 no-underline"
             href="{{ .Permalink}}"
-            >{{ .Title }}</a
+            >{{ .Title }}s</a
           >
           <span
             class="f6 gray db dib-ns"
