--- a/themes/hugo-theme-basic-customized/layouts/_default/terms.html
+++ b/themes/hugo-theme-basic-customized/layouts/_default/terms.html
@@ -23,7 +23,7 @@
           <a
             class="f4 b dib #a9a9b3 no-underline"
             href="{{ .Permalink}}"
-            >{{ .Title }}s</a
+            >{{ .Title }}</a
           >
           <span class="f6 gray db dib-ns child"
             ><em>last seen</em> {{ .Lastmod.Format "January 2, 2006" }}</span
