--- a/themes/hugo-theme-basic-customized/layouts/partials/head_includes.html
+++ b/themes/hugo-theme-basic-customized/layouts/partials/head_includes.html
@@ -14,7 +14,7 @@
 	href="{{ .Site.BaseURL }}css/style.css"
 />
 
-{{ if .RSSLink }}
-  <link href="{{ .RSSLink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
-  <link href="{{ .RSSLink }}" rel="feed" type="application/rss+xml" title="{{ .Site.Title }}" />
+{{ if .RelPermalink }}
+  <link href="{{ .RelPermalink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
+  <link href="{{ .RelPermalink }}" rel="feed" type="application/rss+xml" title="{{ .Site.Title }}" />
 {{ end }}
