--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -28,10 +28,9 @@ code {
 	-webkit-font-smoothings:	antialiased;
 	-moz-osx-font-smoothing:	grayscale;
 }
-
 .hljs {
 	background:					#292a2d;
-	color:						#a9a9b3;	
+	color:						#a9a9b3;
 }
 
 .hljs-built_in{
@@ -39,7 +38,10 @@ code {
 }
 
 .hljs-nomarkup{
-	color:						#d38b00;
+	color: #0078d3;
+}
+.hljs-number{
+	color: #e0e0e0;
 }
 
 a:hover {
@@ -79,21 +81,51 @@ p.f6 a {
     color:                      #929292;
 }
 
+
 code::selection,
+span.hljs-keyword::selection,
+span.hljs-operator::selection,
+span.hljs-pattern-match::selection,
+span.hljs-constructor::selection,
+span.hljs-params::selection,
+span.hljs-function::selection,
+span.hljs-typing::selection,
+span.hljs-module-access::selection,
+span.hljs-module::selection,
+span.hljs-comment::selection,
+span.hljs-quote::selection,
+span.hljs-doctag::selection,
+span.hljs-formula::selection,
+span.hljs-section::selection,
+span.hljs-name::selection,
+span.hljs-selector-tag::selection,
+span.hljs-deletion::selection,
+span.hljs-subst::selection,
+span.hljs-literal::selection,
+span.hljs-string::selection,
+span.hljs-regexp::selection,
+span.hljs-addition::selection,
+span.hljs-attribute::selection,
+span.hljs-meta-string::selection,
+span.hljs-built_in::selection,
+span.hljs-class::selection,
 span.hljs-title::selection,
 span.hljs-attr::selection,
-span.hljs-selector-id::selection,
+span.hljs-variable::selection,
+span.hljs-template-variable::selection,
+span.hljs-type::selection,
 span.hljs-selector-class::selection,
 span.hljs-selector-attr::selection,
-span.hljs-built_in::selection,
-span.hljs-string::selection,
+span.hljs-symbol::selection,
+span.hljs-bullet::selection,
+span.hljs-meta::selection,
+span.hljs-emphasis::selection,
+span.hljs-strong::selection,
+span.hljs-link::selection,
+span.hljs-selector-id::selection,
 span.hljs-number::selection,
-span.hljs-section::selection,
-span.php::selection,
 span.hljs::selection,
 span.hljs-nomarkup::selection,
-span.hljs-attribute::selection,
-span.hljs-literal::selection,
 span.hljs-selector-pseudo::selection {
     color: 						#00fb10;
     background: 				black;
@@ -106,3 +138,5 @@ span.hljs-selector-pseudo::selection {
     line-height:                1.6;
     letter-spacing:             .06em;
 }
+
+
