--- a/themes/hugo-theme-basic-customized/layouts/partials/head_includes.html
+++ b/themes/hugo-theme-basic-customized/layouts/partials/head_includes.html
@@ -1,18 +1,9 @@
-<link
-  rel="stylesheet"
-  href="https://unpkg.com/tachyons@4.11.1/css/tachyons.min.css"
-/>
+<link rel="stylesheet" href="https://unpkg.com/tachyons@4.11.1/css/tachyons.min.css"/>
 
+<!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/highlightjs@9.12.0/styles/github-gist.css"/>-->
 
-<link
-  rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/highlightjs@9.12.0/styles/github-gist.css"
-/>
-
-<link 
-	rel="stylesheet" 
-	href="{{ .Site.BaseURL }}css/style.css"
-/>
+<link rel="stylesheet" href="{{ .Site.BaseURL }}css/atom-one-dark-reasonable.css" />
+<link rel="stylesheet"  href="{{ .Site.BaseURL }}css/style.css"/>
 
 {{ if .RelPermalink }}
   <link href="{{ .RelPermalink }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}" />
