--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,34 +2,49 @@
 
 :root{
 	/*Defaults -- these should be overwritten*/
-	--inside-bg-color: 		#e2e5e2;
-	--outside-bg-color: 	#008300;
-	--code-bg-color: 		#282c34;
+ --inside-bg-color: #e2e5e2;
+	--outside-bg-color: #008300;
+	--code-bg-color: #282c34;
 }
 
 * {
-	letter-spacing:		0;
-	line-height:    	1.44;
-
+	letter-spacing: 0;
+	line-height: 1.44;
+	scrollbar-width: auto; /* "auto" or "thin" */
+ scrollbar-color: var(--outside-bg-color) var(--inside-bg-color);
 }
 
+body::-webkit-scrollbar {
+	width: 12px; /* width of the entire scrollbar */
+ }
+
+ body::-webkit-scrollbar-track {
+	background: var(--inside-bg-color); /* color of the tracking area */
+ }
+
+ body::-webkit-scrollbar-thumb {
+	background-color: var(--outside-bg-color); /* color of the scroll thumb */
+ border-radius: 10px; /* roundness of the scroll thumb */
+ border: 3px solid var(--inside-bg-color); /* creates padding around scroll thumb */
+ }
+
 body{
-	font-family:		"Roboto Mono", monospace;
-	font-weight: 		400;
-	font-size: 			20px;
-	max-width: 			40em;
-	margin:				auto;
-	color: 				#2b2b2b;
-	background-color: 	var(--outside-bg-color);
+	font-family: "Roboto Mono", monospace;
+	font-weight: 400;
+	font-size: 20px;
+	max-width: 40em;
+	margin: auto;
+	color: #2b2b2b;
+	background-color: var(--outside-bg-color);
 }
 
 .box{
-	max-width: 			50em;
-	margin:				2em;
-	border:				3px solid black;
-	padding:			1.5em;
-	background: 		var(--inside-bg-color);
-	overflow-wrap:		break-word;
+	max-width: 50em;
+	margin: 2em;
+	border: 3px solid black;
+	padding: 1.5em;
+	background: var(--inside-bg-color);
+	overflow-wrap: break-word;
 	vertical-align: middle
 }
 
@@ -39,55 +54,55 @@ body{
 
 #footer::before {
 	content: "---\00000a"; /*\00000a = newline*/
-	white-space: pre;
+ white-space: pre;
 }
 
 b{
-	font-size: 		115%;
+	font-size: 115%;
 }
 
 a:link, a:visited {
-	text-decoration:				none;
-	box-shadow: 					inset 0 -0.14em 0 var(--outside-bg-color);
-	color: 							#000000;
-    transition-property:        	background-color;
-    transition-timing-function: 	ease-in-out;
-	transition-duration:    		400ms;
+	text-decoration: none;
+	box-shadow: inset 0 -0.14em 0 var(--outside-bg-color);
+	color: #000000;
+	transition-property: background-color;
+	transition-timing-function: ease-in-out;
+	transition-duration: 400ms;
 }
 
 a:hover {
-	background-color: 		var(--outside-bg-color);
-	color: 					var(--inside-bg-color);
-	box-shadow: 			none;
-	transition-duration:    400ms;
+	background-color: var(--outside-bg-color);
+	color: var(--inside-bg-color);
+	box-shadow: none;
+	transition-duration: 400ms;
 }
 
 
 a:hover::selection {
-	transition-duration:    400ms;
-	background-color: 		black;
-	color: 					var(--inside-bg-color);
-	box-shadow: 			none;
+	transition-duration: 400ms;
+	background-color: black;
+	color: var(--inside-bg-color);
+	box-shadow: none;
 }
 
 a.inverse-bg {
-	transition-duration:	400ms;
-	color: 					white;
-	filter: 				invert(100%);
+	transition-duration: 400ms;
+	color: white;
+	filter: invert(100%);
 }
 
 a.inverse-bg:hover::selection {
-	transition-duration:    400ms;
-	color: 					black !important;
-	background-color: 		white !important;
+	transition-duration: 400ms;
+	color: black !important;
+	background-color: white !important;
 }
 
 a.no-custom{
-	box-shadow:		none;
+	box-shadow: none;
 }
 a.no-custom:hover {
-	background-color: 		transparent;
-	box-shadow: 			none;
+	background-color: transparent;
+	box-shadow: none;
 }
 
 img.album{
@@ -95,38 +110,38 @@ img.album{
 }
 
 .hljs, code {
-    padding: 				2px 4px;
-    font-size: 				90%;
-    background-color: 		var(--code-bg-color) !important;
-    color:					seashell;
-	border-radius: 			4px;
+	padding: 2px 4px;
+	font-size: 90%;
+	background-color: var(--code-bg-color) !important;
+	color: seashell;
+	border-radius: 4px;
 }
 
 .hljs::selection, code::selection, .hljs>span::selection{
-	color: 						#00fb10 !important;
-    background: 				black !important;
+	color: #00fb10 !important;
+	background: black !important;
 }
 
 td.posts {
-	width: 					29%;
-	vertical-align: 		top;
+	width: 29%;
+	vertical-align: top;
 }
 
 td.projects-image {
-	width: 					35%;
-	vertical-align: 		top;
-	padding-right: 			1em;
+	width: 35%;
+	vertical-align: top;
+	padding-right: 1em;
 }
 td.projects-text {
-	vertical-align: 		top;
+	vertical-align: top;
 }
 
 /*https://github.com/ozh/github-colors*/
-code.tags-py {color: #3caaff;}  /*original:  #3572A5*/
+code.tags-py {color: #3caaff;} /*original: #3572A5*/
 code.tags-javascript {color: #f1e05a;}
 code.tags-html {color: #e34c26;}
 code.tags-css {color: #563d7c;}
-code.tags-php {color: #5374de;}  /*original:  #4f5d95*/
+code.tags-php {color: #5374de;} /*original: #4f5d95*/
 code.tags-java {color: #b07219;}
 code.tags-cpp {color: #f34b7d;}
 code.tags-shell {color: #89e051;}
@@ -182,8 +197,8 @@ blockquote > div > p {
 
 blockquote {
 	border-left: 10px solid var(--inside-bg-color);
-	filter: brightness(95%);  /*botched way to darken the color*/
-	margin: 1em 10px 1.5em;
+	filter: brightness(95%); /*botched way to darken the color*/
+ margin: 1em 10px 1.5em;
 	padding: 0.5em 10px;
 }
 
