--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
-
-:root{
+:root {
 	/*Defaults -- these should be overwritten*/
 	--inside-bg-color: #e2e5e2;
 	--outside-bg-color: #006b75;
@@ -10,14 +9,16 @@
 * {
 	letter-spacing: 0;
 	line-height: 1.44;
-	scrollbar-width: auto; /* "auto" or "thin" */
+	scrollbar-width: auto;
+	/* "auto" or "thin" */
 }
 
 html {
-	overflow-y: scroll; /*https://stackoverflow.com/a/7607206/7833617*/
+	overflow-y: scroll;
+	/*https://stackoverflow.com/a/7607206/7833617*/
 }
 
-body{
+body {
 	font-family: "Roboto Mono", monospace;
 	font-weight: 400;
 	font-size: 20px;
@@ -28,20 +29,25 @@ body{
 }
 
 body::-webkit-scrollbar {
-	width: 12px; /* width of the entire scrollbar */
+	width: 12px;
+	/* width of the entire scrollbar */
 }
 
- body::-webkit-scrollbar-track {
-	background: var(--outside-bg-color); /* color of the tracking area */
+body::-webkit-scrollbar-track {
+	background: var(--outside-bg-color);
+	/* color of the tracking area */
 }
 
- body::-webkit-scrollbar-thumb {
-	background-color: var(--outside-bg-color); /* color of the scroll thumb */
-	border-radius: 12px; /* roundness of the scroll thumb */
-	border: 2px solid var(--inside-bg-color); /* creates padding around scroll thumb */
+body::-webkit-scrollbar-thumb {
+	background-color: var(--outside-bg-color);
+	/* color of the scroll thumb */
+	border-radius: 12px;
+	/* roundness of the scroll thumb */
+	border: 2px solid var(--inside-bg-color);
+	/* creates padding around scroll thumb */
 }
 
-.box{
+.box {
 	max-width: 50em;
 	margin: 2em;
 	border: 3px solid black;
@@ -56,11 +62,12 @@ body::-webkit-scrollbar {
 }
 
 #footer::before {
-	content: "---\00000a"; /*\00000a = newline*/
- 	white-space: pre;
+	content: "---\00000a";
+	/*\00000a = newline*/
+	white-space: pre;
 }
 
-b{
+b {
 	font-size: 115%;
 }
 
@@ -79,7 +86,6 @@ a:hover {
 	box-shadow: none;
 	transition-duration: 400ms;
 }
-
 
 a:hover::selection {
 	transition-duration: 400ms;
@@ -100,15 +106,16 @@ a.inverse-bg:hover::selection {
 	background-color: white !important;
 }
 
-a.no-custom{
+a.no-custom {
 	box-shadow: none;
 }
+
 a.no-custom:hover {
 	background-color: transparent;
 	box-shadow: none;
 }
 
-img.album{
+img.album {
 	width: 32%;
 }
 
@@ -120,7 +127,7 @@ img.album{
 	border-radius: 4px;
 }
 
-.hljs::selection, code::selection, .hljs>span::selection{
+.hljs::selection, code::selection, .hljs>span::selection {
 	color: #00fb10 !important;
 	background: black !important;
 }
@@ -135,39 +142,21 @@ td.projects-image {
 	vertical-align: top;
 	padding-right: 1em;
 }
+
 td.projects-text {
 	vertical-align: top;
 }
-
-/*https://github.com/ozh/github-colors*/
-code.tags-py {color: #3caaff;} /*original: #3572A5*/
-code.tags-javascript {color: #f1e05a;}
-code.tags-html {color: #e34c26;}
-code.tags-css {color: #563d7c;}
-code.tags-php {color: #5374de;} /*original: #4f5d95*/
-code.tags-java {color: #b07219;}
-code.tags-cpp {color: #f34b7d;}
-code.tags-shell {color: #89e051;}
-code.tags-go {color: #00ADD8;}
-code.tags-bf {color: #2F2530;}
-code.tags-matlab {color: #e16737;}
-code.tags-ahk {color: #6594b9;}
-code.tags-gcode {color: #D08CF2;}
-code.tags-latex {color: #3D6117;}
-code.tags-apache {color: #d80044;}
-code.tags-sheet {color: #00d800;}
-code.tags-misc {color: #fb00ff;}
 
 td.projects-image img {
 	width: 100%;
 }
 
-
-div.nav{
+div.nav {
 	display: contents;
 }
 
-div:nth-of-type(2){ /* this is bad! */
+div:nth-of-type(2) {
+	/* this is bad! */
 	margin-top: 1em;
 }
 
@@ -175,17 +164,16 @@ span.tab {
 	margin-left: 40px;
 }
 
-span.tab p{
+span.tab p {
 	margin-top: 0;
 	margin-bottom: 3%;
-
 }
 
 hr {
 	border-top: 1px dashed #171717
 }
 
-blockquote>code{
+blockquote>code {
 	font-size: 90% !important;
 	/*white-space: normal;*/
 }
@@ -196,7 +184,7 @@ blockquote>code{
 	white-space: pre;
 }*/
 
-blockquote > div > p {
+blockquote>div>p {
 	margin-top: 1em;
 	margin-bottom: 0;
 	display: block;
@@ -204,8 +192,9 @@ blockquote > div > p {
 
 blockquote {
 	border-left: 10px solid var(--inside-bg-color);
-	filter: brightness(95%); /*botched way to darken the color*/
- 	margin: 1em 10px 1.5em;
+	filter: brightness(95%);
+	/*botched way to darken the color*/
+	margin: 1em 10px 1.5em;
 	padding: 0.5em 10px;
 }
 
@@ -213,3 +202,81 @@ blockquote p {
 	display: inline;
 }
 
+img.dropdown {
+	height: 1.08em;
+	vertical-align: middle;
+}
+
+
+/*https://github.com/ozh/github-colors*/
+code.tags-py {
+	color: #3caaff;
+}
+
+/*original: #3572A5*/
+
+code.tags-javascript {
+	color: #f1e05a;
+}
+
+code.tags-html {
+	color: #e34c26;
+}
+
+code.tags-css {
+	color: #563d7c;
+}
+
+code.tags-php {
+	color: #5374de;
+}
+
+/*original: #4f5d95*/
+
+code.tags-java {
+	color: #b07219;
+}
+
+code.tags-cpp {
+	color: #f34b7d;
+}
+
+code.tags-shell {
+	color: #89e051;
+}
+
+code.tags-go {
+	color: #00ADD8;
+}
+
+code.tags-bf {
+	color: #2F2530;
+}
+
+code.tags-matlab {
+	color: #e16737;
+}
+
+code.tags-ahk {
+	color: #6594b9;
+}
+
+code.tags-gcode {
+	color: #D08CF2;
+}
+
+code.tags-latex {
+	color: #3D6117;
+}
+
+code.tags-apache {
+	color: #d80044;
+}
+
+code.tags-sheet {
+	color: #00d800;
+}
+
+code.tags-misc {
+	color: #fb00ff;
+}
