--- a/static/css/style.css
+++ b/static/css/style.css
@@ -22,7 +22,7 @@ body {
 	font-family: "Roboto Mono", monospace;
 	font-weight: 400;
 	font-size: 20px;
-	max-width: 40em;
+	max-width: 42em;
 	margin: auto;
 	color: #2b2b2b;
 	background-color: var(--outside-bg-color);
@@ -137,7 +137,7 @@ img.album {
 }
 
 td.posts {
-	width: 29%;
+	width: fit-content;
 	vertical-align: top;
 }
 
