--- a/static/css/style.css
+++ b/static/css/style.css
@@ -55,7 +55,7 @@ body::-webkit-scrollbar-thumb {
     max-width: 50em;
     margin: 2em;
     border: 3px solid black;
-    padding: 1.5em;
+    padding: 3ch;
     background: var(--inside-bg-color);
     overflow-wrap: break-word;
     vertical-align: middle;
@@ -70,10 +70,6 @@ body::-webkit-scrollbar-thumb {
     content: "---\00000a"; /*\00000a = newline*/
     white-space: pre;
 }
-
-/* b {
-	font-size: 115%;
-} */
 
 a,
 a:visited {
@@ -118,10 +114,6 @@ a.no-custom {
 a.no-custom:hover {
     background-color: transparent;
     box-shadow: none;
-}
-
-img.album {
-    width: 32%;
 }
 
 .hljs,
@@ -222,19 +214,7 @@ img.dropdown {
     vertical-align: middle;
 }
 
-table.about > tbody > tr > td:nth-of-type(1)::before {
-    content: "- ";
-}
-
-table.about > tbody > tr > td:nth-of-type(2)::before {
-    content: "    / ";
-}
-
-table.about {
-    font-size: 20px;
-}
-
-ul li::marker {
+li::marker {
     content: "- ";
 }
 
@@ -269,13 +249,10 @@ h3::before {
     content: "### ";
 }
 
-/*https://github.com/ozh/github-colors*/
-
+/*modified from https://github.com/ozh/github-colors*/
 code.tags-py {
     color: #3caaff;
 }
-
-/*original: #3572A5*/
 
 code.tags-javascript {
     color: #f1e05a;
@@ -292,8 +269,6 @@ code.tags-css {
 code.tags-php {
     color: #5374de;
 }
-
-/*original: #4f5d95*/
 
 code.tags-java {
     color: #b07219;
