--- a/static/css/style.css
+++ b/static/css/style.css
@@ -60,6 +60,7 @@ body::-webkit-scrollbar-thumb {
     overflow-wrap: break-word;
     vertical-align: middle;
     margin-top: 3em;
+    box-shadow: 10px 10px black;
 }
 
 #footer {
