--- a/static/css/style.css
+++ b/static/css/style.css
@@ -51,6 +51,10 @@ body::-webkit-scrollbar-thumb {
     /* creates padding around scroll thumb */
 }
 
+p {
+    margin: 1.5em 0;
+}
+
 .box {
     max-width: 50em;
     margin: 2em;
@@ -180,8 +184,8 @@ div.nav > a:first-child {
     content: "/";
 } */
 
+/* this is bad! */
 div:nth-of-type(2) {
-    /* this is bad! */
     margin-top: 1em;
 }
 
