--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500;600;700;800&display=swap');
 :root {
     /*Defaults -- these should be overwritten*/
     --inside-bg-color: #e2e5e2;
@@ -22,8 +21,28 @@ html {
     /*https://stackoverflow.com/a/7607206/7833617*/
 }
 
+/* pt-mono-regular - latin */
+@font-face {
+    font-family: 'PT Mono';
+    font-style: normal;
+    font-weight: 400;
+    src: url('/static/fonts/pt-mono-v8-latin-regular.eot'); /* IE9 Compat Modes */
+    src: local(''),
+        url('/static/fonts/pt-mono-v8-latin-regular.eot?#iefix')
+            format('embedded-opentype'),
+        /* IE6-IE8 */ url('/static/fonts/pt-mono-v8-latin-regular.woff2')
+            format('woff2'),
+        /* Super Modern Browsers */
+            url('/static/fonts/pt-mono-v8-latin-regular.woff') format('woff'),
+        /* Modern Browsers */ url('/static/fonts/pt-mono-v8-latin-regular.ttf')
+            format('truetype'),
+        /* Safari, Android, iOS */
+            url('/static/fonts/pt-mono-v8-latin-regular.svg#PTMono')
+            format('svg'); /* Legacy iOS */
+}
+
 body {
-    font-family: 'Roboto Mono', monospace;
+    font-family: 'PT Mono', 'Roboto Mono', monospace;
     font-weight: 400;
     font-size: 20px;
     max-width: 42em;
@@ -56,7 +75,7 @@ p {
 }
 
 .box {
-    max-width: 50em;
+    max-width: 50rem;
     margin: 2em;
     border: 3px solid black;
     padding: 3ch;
@@ -85,7 +104,7 @@ p {
 }
 
 #footerTable td:nth-of-type(1)::after {
-    content: '  / ';
+    content: ' /';
 }
 
 #footerTable td:nth-of-type(2) {
