--- a/static/css/style.css
+++ b/static/css/style.css
@@ -41,8 +41,9 @@ html {
             format('svg'); /* Legacy iOS */
 }
 
-body {
-    font-family: 'PT Mono', 'Roboto Mono', monospace;
+body,
+input {
+    font-family: 'PT Mono', monospace !important;
     font-weight: 400;
     font-size: 20px;
     max-width: 42em;
