--- a/static/css/style.css
+++ b/static/css/style.css
@@ -59,12 +59,13 @@ input {
     width: 100%;
     font-size: 18px;
     height: 2.5em;
-    padding: 0.5ch;
+    padding: 0.5ch 0.5ch 0.5ch 1ch;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     -o-box-sizing: border-box;
     -ms-box-sizing: border-box;
     box-sizing: border-box;
+    border: none;
 }
 
 .output {
